# hydrochat

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  clean.sh  run.sh
electron/: index.html  main.js  package.json  preload.js
hydrochat-core/: Cargo.toml
hydrochat-core/src/: lib.rs  protocol.rs
hydrochat-proxy/: Cargo.toml
hydrochat-proxy/src/: main.rs
hydrochat-server/: Cargo.toml
hydrochat-server/src/: main.rs
hydrochat-wasm/: Cargo.toml
hydrochat-wasm/src/: lib.rs
