[package]
name = "hydrochat-core"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[features]
dfir = ["dfir_macro", "dfir_rs"]

[dependencies.dfir_macro]
path = "../../hydro/dfir_macro"
optional = true

[dependencies.dfir_rs]
path = "../../hydro/dfir_rs"
optional = true
