[package]
name = "hydrochat-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
warp = "0.3"
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1"
hydrochat-core = { path = "../hydrochat-core" }
dfir_rs = { path = "../../hydro/dfir_rs" }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] } 
futures = "0.3" 