[package]
name = "hydrochat-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hydrochat-core = { path = "../hydrochat-core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["WebSocket", "BinaryType", "MessageEvent", "ErrorEvent", "console", "Performance"] }
getrandom = { version = "0.2", features = ["js"] }
futures-channel = "0.3"
